--- a/charts-packages/ag-charts-vue3/tsconfig-lib.json
+++ b/charts-packages/ag-charts-vue3/tsconfig-lib.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "rootDir": "src",
     "outDir": "lib",
+    "skipLibCheck": true,
     "lib": [
       "esnext",
       "dom",
