--- a/community-modules/vue/tsconfig-lib.json
+++ b/community-modules/vue/tsconfig-lib.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "rootDir": "src",
     "outDir": "lib",
+    "skipLibCheck": true,
     "lib": [
       "esnext",
       "dom",
