--- a/community-modules/vue3/package.json
+++ b/community-modules/vue3/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@ag-grid-community/core": "~28.2.1",
-    "vue": "^3.0.0"
+    "vue": "~3.4.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
