--- a/enterprise-modules/all-modules/package.json
+++ b/enterprise-modules/all-modules/package.json
@@ -87,6 +87,7 @@
   "devDependencies": {
     "@babel/types": "7.12.7",
     "@ag-grid-community/core": "~28.2.1",
+    "@types/babel__traverse": "~7.0.0",
     "@types/jest": "^25.2.1",
     "@types/node": "12.20.20",
     "css-loader": "^3.2.0",
