--- a/grid-packages/ag-grid-vue/tsconfig-lib.json
+++ b/grid-packages/ag-grid-vue/tsconfig-lib.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "rootDir": "src",
     "outDir": "lib",
+    "skipLibCheck": true,
     "lib": [
       "esnext",
       "dom",
