--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bootstrap": "npx lerna bootstrap --no-ci",
     "bootstrap-single-thread": "npx lerna bootstrap --no-ci --concurrency 1",
     "build-tsc": "npx tsc --build",
-    "build": "npx lerna run build",
+    "build": "SKIP_PREFLIGHT_CHECK=true NODE_OPTIONS=--openssl-legacy-provider npx lerna run build",
     "build-prod": "npx lerna run build-prod",
     "package": "npx lerna run package --parallel --ignore '{ag-grid-community,ag-grid-enterprise,ag-grid-documentation,ag-grid-angular-cli-package-example,ag-grid-angular-cli-legacy-package-example,ag-grid-solid-package-example,ag-grid-react-package-example,ag-grid-vue2-package-example,ag-grid-vue3-package-example}' && npx lerna run package --scope '{ag-grid-community,ag-grid-enterprise,ag-grid-documentation,ag-grid-angular-cli-package-example,ag-grid-angular-cli-legacy-package-example,ag-grid-react-package-example,ag-grid-vue2-package-example,ag-grid-vue3-package-example,ag-grid-solid-package-example}'",
     "test": "npx lerna run test --stream",
