Further speed up builds
Don't build all-in-one packages; omitting docs in particular saves a lot of time.

--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "packages": [
     "community-modules/*",
-    "enterprise-modules/*",
-    "charts-packages/*",
-    "grid-packages/*"
+    "enterprise-modules/*"
   ],
   "useNx": false,
   "command": {
