Disable source maps

--- a/community-modules/vue3/tsconfig.json
+++ b/community-modules/vue3/tsconfig.json
@@ -10,7 +10,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "lib",
