--- a/community-modules/angular/tsconfig.json
+++ b/community-modules/angular/tsconfig.json
@@ -9,7 +9,7 @@
     "strictPropertyInitialization": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
