--- a/module-build/tsconfig.esm.es5.json
+++ b/module-build/tsconfig.esm.es5.json
@@ -9,7 +9,7 @@
     "target": "ES5",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "sourceMap": true,
+    "sourceMap": false,
     "types": [],
     /* to prevent inclusion of node types etc, amongst others - sub modules need to specify types they require */
     "lib": [
