--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build-tsc": "npx tsc --build",
     "build": "SKIP_PREFLIGHT_CHECK=true NODE_OPTIONS=--openssl-legacy-provider npx lerna run build",
     "build-prod": "npx lerna run build-prod",
-    "package": "npx lerna run package --parallel --ignore '{ag-grid-community,ag-grid-enterprise,ag-grid-documentation,ag-grid-angular-cli-package-example,ag-grid-angular-cli-legacy-package-example,ag-grid-solid-package-example,ag-grid-react-package-example,ag-grid-vue2-package-example,ag-grid-vue3-package-example}' && npx lerna run package --scope '{ag-grid-community,ag-grid-enterprise,ag-grid-documentation,ag-grid-angular-cli-package-example,ag-grid-angular-cli-legacy-package-example,ag-grid-react-package-example,ag-grid-vue2-package-example,ag-grid-vue3-package-example,ag-grid-solid-package-example}'",
+    "package": "npx lerna run package --parallel",
     "test": "npx lerna run test --stream",
     "cleanCoreDependencies": "npx lerna clean --yes --scope '{ag-grid-angular,ag-grid-solid,ag-grid-angular-legacy,ag-grid-react,ag-grid-vue,ag-grid-docs}'",
     "bootstrapCoreDependencies": "npx lerna bootstrap --scope '{ag-grid-angular,ag-grid-solid,ag-grid-angular-legacy,ag-grid-react,ag-grid-vue,ag-grid-docs}'",
